--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Firebase</string>
+    <string name="logo">Logo</string>
+    <string name="google_sign_in">Google Sign In</string>
+    <string name="facebook_sign_in">Facebook Sign In</string>
+    <string name="apple_sign_in">Apple Sign In</string>
+    <string name="close_button_desc">Close Button</string>
 </resources>
