--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Firebase</string>
+    <string name="title_activity_maps">MapsActivity</string>
+    <string name="title_activity_track">TrackActivity</string>
 </resources>
